# pkg/serverapiclient/model_get_repo_artifacts_request.go
@@ -19,9 +19,9 @@ var _ MappedNullable = &GetRepoArtifactsRequest{}
 
 // GetRepoArtifactsRequest struct for GetRepoArtifactsRequest
 type GetRepoArtifactsRequest struct {
-	GitProviderId *string `json:"gitProviderId,omitempty"`
-	NamespaceId *string `json:"namespaceId,omitempty"`
-	Repository *GitRepository `json:"repository,omitempty"`
+	GitProviderId *string        `json:"gitProviderId,omitempty"`
+	NamespaceId   *string        `json:"namespaceId,omitempty"`
+	Repository    *GitRepository `json:"repository,omitempty"`
 }
 
 // NewGetRepoArtifactsRequest instantiates a new GetRepoArtifactsRequest object
@@ -138,7 +138,7 @@ func (o *GetRepoArtifactsRequest) SetRepository(v GitRepository) {
 }
 
 func (o GetRepoArtifactsRequest) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
+	toSerialize, err := o.ToMap()
 	if err != nil {
 		return []byte{}, err
 	}
@@ -194,5 +194,3 @@ func (v *NullableGetRepoArtifactsRequest) UnmarshalJSON(src []byte) error {
 	v.isSet = true
 	return json.Unmarshal(src, &v.value)
 }
-
-
