# pkg/serverapiclient/model_project.go
@@ -19,10 +19,10 @@ var _ MappedNullable = &Project{}
 
 // Project struct for Project
 type Project struct {
-	Name *string `json:"name,omitempty"`
-	Repository *GitRepository `json:"repository,omitempty"`
-	Target *string `json:"target,omitempty"`
-	WorkspaceId *string `json:"workspaceId,omitempty"`
+	Name        *string        `json:"name,omitempty"`
+	Repository  *GitRepository `json:"repository,omitempty"`
+	Target      *string        `json:"target,omitempty"`
+	WorkspaceId *string        `json:"workspaceId,omitempty"`
 }
 
 // NewProject instantiates a new Project object
@@ -171,7 +171,7 @@ func (o *Project) SetWorkspaceId(v string) {
 }
 
 func (o Project) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
+	toSerialize, err := o.ToMap()
 	if err != nil {
 		return []byte{}, err
 	}
@@ -230,5 +230,3 @@ func (v *NullableProject) UnmarshalJSON(src []byte) error {
 	v.isSet = true
 	return json.Unmarshal(src, &v.value)
 }
-
-
